tests/types/errors/subtype_assignment_invalid.expr
class Animal {}
class Dog < Animal {}

Dog d = Animal();
